Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ body {
 }
 
 section {
+vertical-align: top;
+}
+
+#content {
   text-align: center;
 }
 
@@ -27,7 +31,6 @@ img {
   max-width: 25em;
   margin: 1.5rem;
   display: block;
-  float: left;
 }
 
 h2 {
@@ -42,7 +45,7 @@ p {
 }
 
 .btn {
-  margin: 1.5rem 1.5rem 2rem, 1.5rem;
+  margin: 1.5rem;
   background-color: #f2f2f2;
   border: 3px solid #333;
   color: black;
